# rust

./: Makefile  README.md  docker-compose.yml
Dockerfile/Backend/: Dockerfile
Dockerfile/Database/: Dockerfile
backend/: .env.local  Cargo.toml  license.html  license.json
backend/migrations/2023-02-07-091845_creat_users/: up.sql
backend/src/: lib.rs  main.rs  migrations.rs  schema.rs
backend/src/users/: create.rs  migration.rs  mod.rs  model.rs
database/: .env.local
