[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
dotenv  = "0.15.0"
pwhash = "1.0.0"
env_logger = "0.10.0"
diesel = { version = "*", features = ["mysql"] }
uuid = { version = "1.3.0", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["unstable-locales"] }
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }


[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "migrations"
path = "src/migrations.rs"